fix style to not collapse notes with button

--- a/canvas-app/src/components/Box/index.sass
+++ b/canvas-app/src/components/Box/index.sass
@@ -76,7 +76,7 @@
     ul
       padding-left: 0
       margin: 0
-      padding: 0 0.6rem 0.8rem 0.6rem
+      padding: 0 0.6rem 2.5rem 0.6rem
       text-align: center
 
 .item
